--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="scroll-smooth" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/NM.png" />
+    <link rel="icon" type="image/svg" href="/NM.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nicolas Meza</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
