--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg" href="/NM.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:description" content="Nicolas Meza @nicolasmezacode" />
+    <meta property="og:image" content="/src/assets/final_Original (2) (1).jpg" />
     <title>Nicolas Meza</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
